aggiunta la possibilità di avviare razor direttamente dal task aggiunto parametro per tipologia razor "Long task" (blocca il timer di orchard e lo riavvia alla fine del task) aggiunto metodo updateeschedule per migliorare le performance in operazioni massive fix alla gestione di autodestroy, veniva sovrascritto nel salvataggio

--- a/src/Modules/Laser.Orchard.TaskScheduler/Views/EditorTemplates/ScheduledTaskViewModel.cshtml
+++ b/src/Modules/Laser.Orchard.TaskScheduler/Views/EditorTemplates/ScheduledTaskViewModel.cshtml
@@ -8,7 +8,7 @@
 
 @{
     Style.Require("Accordion").AtHead();
-    
+
     MvcHtmlString taskBlock = Html.UniqueClientId("ScheduledTaskViewModel");
 
     var appId = "st_" + taskBlock;
@@ -23,6 +23,11 @@
     @Html.HiddenFor(m => m.Scheduling, new { @class = "ph-mark-for-scheduling", @id = "schedule_" + @appId })
 
     <label for="sig_@appId">@T("Signal name")</label>
+
+    @Html.DropDownListFor(m => m.ExecutionType, new SelectList(Enum.GetValues(typeof(ExecutionTypes))), new {
+           @title = @T("Execution type.")
+       })
+
     @Html.TextBoxFor(m => m.SignalName, new {
         placeholder = T("Signal name").ToString(),
         @title = T("Name of the signal that will be triggered by the task").ToString(),
@@ -35,12 +40,12 @@
     @Html.HiddenFor(m => m.Running) @*I need to have the value of running somewhere in the form*@
     @if (Model.Running > 0) {
         <text>
-        <button id="unscheduleTask_@appId" type="submit" name="submit.UnscheduleTask" value="yes please" onclick="FlagForSchedulingEvent('@appId');">@T("Unschedule")</button>
-        @*@Html.ActionLink(T("Unschedule this task").ToString(), "IndexUnscheduleTask", "Admin", new { }, new { @class = "button" })*@
+            <button id="unscheduleTask_@appId" type="submit" name="submit.UnscheduleTask" value="yes please" onclick="FlagForSchedulingEvent('@appId');">@T("Unschedule")</button>
+            @*@Html.ActionLink(T("Unschedule this task").ToString(), "IndexUnscheduleTask", "Admin", new { }, new { @class = "button" })*@
         </text>
     } else {
         <text>
-        <button id="scheduleTask_@appId" type="submit" name="submit.ScheduleTask" value="yes please" onclick="FlagForSchedulingEvent('@appId');">@T("Schedule")</button>
+            <button id="scheduleTask_@appId" type="submit" name="submit.ScheduleTask" value="yes please" onclick="FlagForSchedulingEvent('@appId');">@T("Schedule")</button>
         </text>
     }
 
@@ -48,48 +53,50 @@
         @moreDetails
     </a>
 
-    <div id="collapse_@appId"  style="display:none">
+    <div id="collapse_@appId" style="display:none">
         <label for="@Html.FieldIdFor(m => m.ScheduledStartUTC)">@T("Start Date")</label>
         @Html.EditorFor(m => m.ScheduledStartUTCEditor)
 
         <label>@T("Periodicity")</label>
-            @Html.TextBoxFor(m => m.PeriodicityTime, new {
-           @title = T("Amount of time that should pass between repetitions of the task (integer)").ToString(),
-           @id = "time_" + @appId,
-           @class = "text small",
-           @pattern = "[0-9]*{1,}",
-           @required = "required"
-       })
+        @Html.TextBoxFor(m => m.PeriodicityTime, new {
+       @title = T("Amount of time that should pass between repetitions of the task (integer)").ToString(),
+       @id = "time_" + @appId,
+       @class = "text small",
+       @pattern = "[0-9]*{1,}",
+       @required = "required"
+   })
 
         @Html.DropDownListFor(m => m.PeriodicityUnit, new SelectList(Enum.GetValues(typeof(TimeUnits))), new {
             @title = @T("The time units for the repetitions of the task.")
         })
 
         <label>@T("Content Item Id")</label>
-            @Html.TextBoxFor(m => m.ContentItemId, new {
-            @class = "text small",
-            @pattern = "[0-9]*",
-            @required = "required",
-            @title = @T("Id of the Content Item that will be passed with the task. 0 for no item.")
-        })
+        @Html.TextBoxFor(m => m.ContentItemId, new {
+        @class = "text small",
+        @pattern = "[0-9]*",
+        @required = "required",
+        @title = @T("Id of the Content Item that will be passed with the task. 0 for no item.")
+    })
+        <br />@Html.CheckBoxFor(m => m.Autodestroy) <label>@T("Autodestroy")</label>
+        <br />@Html.CheckBoxFor(m => m.LongTask) <label>@T("LongTask")</label>
     </div>
-    
+
 
     @*Link to remove the task*@
-    @if (Model.Running == 0) {
+    @if(Model.Running == 0) {
         <text>
-        <br />
-        @Html.LinkToRemoveNestedForm("<i class=\"fa fa-times\" style=\"color: red\"></i> " + T(" Remove this task").ToString(), ".j_scheduledtasks", "input.ph-mark-for-delete")
+            <br />
+            @Html.LinkToRemoveNestedForm("<i class=\"fa fa-times\" style=\"color: red\"></i> " + T(" Remove this task").ToString(), ".j_scheduledtasks", "input.ph-mark-for-delete")
         </text>
-    } else {
+        } else {
         <text>
-        <br />
-        @T("The task is scheduled for execution. Unschedule it before removing it.")
+            <br />
+            @T("The task is scheduled for execution. Unschedule it before removing it.")
         </text>
-    }
+        }
 
-    <hr style="margin-top:0.5em; margin-bottom:0.5em;"/>
-    <script type="text/javascript">
+        <hr style="margin-top:0.5em; margin-bottom:0.5em;" />
+        <script type="text/javascript">
 
         $(function () {
             $('#collapseButton_@appId').click(function () {
@@ -107,8 +114,8 @@
                 return false;
             });
         });
-    </script>
-</div>
+        </script>
+    </div>
 
 
 
