--- a/src/Modules/Laser.Orchard.ContactForm/Views/Parts/ContactForm.cshtml
+++ b/src/Modules/Laser.Orchard.ContactForm/Views/Parts/ContactForm.cshtml
@@ -8,6 +8,9 @@
     Style.Include("ContactForm.css").AtHead();
     const string displayNone = "style=\"display:none\"";
     var contactForm = (ContactFormViewModel)Model.ContactForm;
+    var policyUrl = Model.ContactForm.AcceptPolicyUrl;
+    var policyUrlText = Model.ContactForm.AcceptPolicyUrlText;
+    var policyText = Model.ContactForm.AcceptPolicyText;
     var displaySubject = contactForm.ShowSubjectField ? string.Empty : displayNone;
     var displayName = contactForm.ShowNameField ? string.Empty : displayNone;
     var displayAttachmentButton = contactForm.EnableFileUpload ? string.Empty : displayNone;
@@ -19,9 +22,8 @@
     var confirmEmail = formData != null ? ((NameValueCollection)formData)["ConfirmEmail"] : "";
     var subject = formData != null ? ((NameValueCollection)formData)["Subject"] : "";
     var message = formData != null ? ((NameValueCollection)formData)["Message"] : "";
-    }
-@{using (Html.BeginForm("sendcontactemail", "contactform", new { area = "Laser.Orchard.ContactForm" }, FormMethod.Post, new { @class = "contact-form" }))
-    {
+}
+@{using (Html.BeginForm("sendcontactemail", "contactform", new { area = "Laser.Orchard.ContactForm" }, FormMethod.Post, new { @class = "contact-form" })) {
         <ul>
             <li @Html.Raw(displayName)>
                 <label for="Name">@T("Name")</label>
@@ -45,9 +47,27 @@
             </li>
         </ul>
         <div id="AttachmentSection-@uniqueId" type="hidden">
-            <img id="AttachmentPreview-@uniqueId" ></img>
+            <img id="AttachmentPreview-@uniqueId"></img>
             <label id="AttachmentNameLabel-@uniqueId"></label>
             <br />
+        </div>
+        <div>
+            @{
+                if (Model.ContactForm.AcceptPolicy || !string.IsNullOrEmpty(policyUrl)) {
+                    var requiredfield = "";
+                    if (Model.ContactForm.AcceptPolicy) {
+                        requiredfield = "required";
+                    }
+                    <span>
+                        <input id="Accept-@uniqueId" name="Accept" type="checkbox" @requiredfield value="1" />
+                        @if (Model.ContactForm.AcceptPolicy) {
+                            <span class="required">*</span>
+                        }
+                        @policyText <a href="@policyUrl" target="_blank">@policyText</a>
+                        <span role="alert" id="AcceptError-@uniqueId" class="wpcf7-not-valid-tip" style="display:none">@T("Privacy Policy must be accepted.")</span>
+                    </span>
+                }
+            }
         </div>
         <input id="ReturnUrl-@uniqueId" name="ReturnUrl" type="hidden" value="@Context.Request.ToUrlString()" />
         <input id="Id-@uniqueId" name="Id" type="hidden" value="@uniqueId" />
@@ -59,7 +79,7 @@
 }
 
 @using (Script.Head()) {
-     <script type="text/javascript">
+    <script type="text/javascript">
          $(document).ready(function () {
              $('#attachment_button-@uniqueId').click(function () {
                  $.colorbox({ iframe: true, width: "40%", height: "26%", href: "@(Url.Action("Add", "FileUpload", new { Area = "Laser.Orchard.ContactForm" }) + "?ContactFormID=" + uniqueId)", title: "@T("Upload file")" });
