traduzioni e pagina della privacy

--- a/src/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml
+++ b/src/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml
@@ -10,9 +10,10 @@
     var contactForm = (ContactFormViewModel)Model.ContactForm;
 
 
-    var privacyUrl = @"https://laser-group.com/privacy-policy";
-    var privacyLinkText = "Privacy Policy"; // text for the link here
-    var prePrivacyText = T("I declare that I have read and understood ").Text;
+    var privacyUrl = @"informativa-sulla-privacy";
+    var privacyLinkText =  T("the privacy policy.").Text; // text for the link here
+	 var prePrivacyText = T("By clicking \"SEND\" I declare that I have read and understood ").Text;
+   
     var privacyTarget = "_blank";
 
 
