--- a/src/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml
+++ b/src/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml
@@ -30,10 +30,10 @@
         .SelectMany(pa => pa.Fields)
         .OfType<LinkField>()
         .FirstOrDefault(fi => fi.Name == "Privacy");
-    var privacyUrl = "";
-    var privacyLinkText = ""; // text for the link here
-    //var prePrivacyText = T("By clicking \"SEND\" I declare that I have read and understood ").Text;
-    var prePrivacyText = T("I declare that I have read and understood ").Text;
+    var privacyUrl = "informativa-sulla-privacy";
+    var privacyLinkText = T("the privacy policy.").Text; // text for the link here
+    var prePrivacyText = T("By clicking \"SEND\" I declare that I have read and understood ").Text;
+
 
     var privacyTarget = "";
     if (privacyField != null) {
