--- a/src/Modules/Laser.Orchard.UserReactions/Styles/reactions.css
+++ b/src/Modules/Laser.Orchard.UserReactions/Styles/reactions.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 
 @font-face {
     font-family: "reactions";
@@ -96,54 +96,4 @@
 
 .reaction-icon-shocked:before {
     content: "\70";
-}
-
-/* Reactions */
-.reaction-wrapper {
-    clear: both;
-    overflow: auto;
-    position: relative;
-    margin: 5px 0 5px 0;
-}
-
-    .reaction-wrapper.disabled .reaction-container {
-        cursor: not-allowed !important;
-    }
-
-    .reaction-wrapper.require-login .reaction-container {
-        cursor: alias !important;
-    }
-
-.reaction-container {
-    display: inline-block;
-    padding: 0 5px 0 5px;
-    margin: 1px;
-    cursor: pointer;
-}
-
-    .reaction-container:hover {
-        color: #ff6a00;
-    }
-
-    .reaction-container.selected {
-        color: red;
-    }
-
-        .reaction-container.selected .reaction-icon {
-            font-size: 3.7em;
-        }
-
-.reaction-icon {
-    font-size: 3.5em;
-    height: 100% !important;
-    width: 100% !important;
-    line-height: 100% !important;
-    background-image: none !important;
-    text-align: center !important;
-}
-
-.button.reaction-summary {
-    position: absolute;
-    bottom: 0;
-    right: 0;
 }
