--- a/src/Themes/KrakeDefaultTheme/Views/Parts.MenuWidget-Navigation.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Parts.MenuWidget-Navigation.cshtml
@@ -5,11 +5,10 @@
     ShellSettings _shellsettings;
     WorkContext.TryResolve<ShellSettings>(out _shellsettings);
     string tenantname = _shellsettings.Name.ToLower();
-    
+
     var Menu = Model.Menu;
     var items = (IList<dynamic>)Enumerable.Cast<dynamic>(Menu.Items);
-    if (items.Any()) {
-    }
+
 }
 
 <nav class="navbar navbar-default">
@@ -28,14 +27,14 @@
             <ul class="nav navbar-nav navbar-right navbar-blue">
                 @foreach (var item in items) {
                     //se la voce di menu ha figli
-                    
-                    
-                    /* 
+                    /*
                      * Secondo metodo risoluzione
-                     * 
+                     *
                      * @Display(item)
-                     * 
+                     *
                      * */
+
+                    //metodo funzionante
                     if (item.Items.Count > 0) {
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@item.Text<span class="caret"></span></a>
