--- a/src/Themes/KrakeDefaultTheme/Views/Orchard.Users/Account/ChangePassword.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Orchard.Users/Account/ChangePassword.cshtml
@@ -4,6 +4,7 @@
     <p>@T("Use the form below to change your password.")</p>
     <p>@T("New passwords are required to be a minimum of {0} characters in length.", ViewData["PasswordLength"])</p>
     <hr />
+    @Html.ValidationSummary(T("Password change was unsuccessful. Please correct the errors and try again.").ToString())
     @using (Html.BeginFormAntiForgeryPost(Url.Action("ChangePassword"), FormMethod.Post, new { @class = "form-horizontal" })) {
         <!-- Current Password -->
         <div class="form-group">
