TaskScheduler: ScheduledTaskViewModel labels for checkboxes

--- a/src/Modules/Laser.Orchard.TaskScheduler/Views/EditorTemplates/ScheduledTaskViewModel.cshtml
+++ b/src/Modules/Laser.Orchard.TaskScheduler/Views/EditorTemplates/ScheduledTaskViewModel.cshtml
@@ -77,8 +77,8 @@
         @required = "required",
         @title = @T("Id of the Content Item that will be passed with the task. 0 for no item.")
     })
-        <br />@Html.CheckBoxFor(m => m.Autodestroy) <label>@T("Autodestroy")</label>
-        <br />@Html.CheckBoxFor(m => m.LongTask) <label>@T("LongTask")</label>
+        <br />@Html.CheckBoxFor(m => m.Autodestroy) <label class="forcheckbox">@T("Autodestroy")</label>
+        <br />@Html.CheckBoxFor(m => m.LongTask) <label class="forcheckbox">@T("LongTask")</label>
     </div>
 
 
