- Add an optional "thank you page" URL. - Add Import/Export/Cloning for policy related and "thank you page" properties - fix duplicated checkbox for

--- a/src/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml
+++ b/src/Modules/Laser.Orchard.ContactForm/Views/EditorTemplates/Parts/ContactForm.cshtml
@@ -27,8 +27,7 @@
 <fieldset>
     <legend></legend>
     <div class="editor-field">
-        <label>@Html.CheckBoxFor(model => model.ContactForm.AcceptPolicy) @T("Accept policy required")</label>
-        <label id="required-name-field">@Html.CheckBoxFor(model => model.ContactForm.AcceptPolicy) @T("Agree policy will be required to post form")</label>
+        <label>@Html.CheckBoxFor(model => model.ContactForm.AcceptPolicy) @T("User will have to accept policies before submit a message.")</label>
     </div>
     <div class="editor-field">
         @Html.TextBoxFor(model => model.ContactForm.AcceptPolicyText, new { @class = "text large", placeholder = T("I have read and agree to the ") })
@@ -41,6 +40,10 @@
     <div class="editor-field">
         @Html.TextBoxFor(model => model.ContactForm.AcceptPolicyUrl, new { @class = "text large" })
         <span class="hint">@T("Policy Url.")</span>
+    </div>
+    <div class="editor-field">
+        @Html.TextBoxFor(model => model.ContactForm.ThankyouPage, new { @class = "text large", placeholder = T("Insert a thank you page") })
+        <span class="hint">@T("Thank you page Url.")</span>
     </div>
 </fieldset>
 <fieldset>
