--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/Create.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/Create.cshtml
@@ -19,7 +19,7 @@
 <div class="edit-address">
     <div class="edit-address new-address">
         <div class="address-input">
-            @Html.LabelFor(m => m.AddressType, T("Address Type").Text)
+            @Html.LabelFor(m => m.AddressType, T("Address Type").Text, new { })
             @Html.EnumDropDownListFor(m => m.AddressType)
         </div>
         @EditorForString(m => m.Honorific,
@@ -52,6 +52,11 @@
     </div>
     <div class="action save-button">
         <button class="primaryAction" type="submit" name="submit.Save" value="submit.Save">@T("Save")</button>
+        @{
+            var returnUrl = Url.Action("MyAddresses", "Addresses");
+        }
+
+        <a id="button-cancel" href="@returnUrl" class="button">@T("Cancel")</a>
     </div>
 </div>
 }
